app/components/Comission.module.css
.container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.comissionContainer {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  background-color: var(--primary-clr);
}

.comissionColumn1, .comissionColumn2 {
  flex: 1;
}

.comissionColumn1 {
  flex: 1 1 60vw;
}
.comissionColumn2 {
  flex: 1 1 40vw;
}

.comissionTitle {
  background-color: var(--secondary-clr);
  color: white;
  padding: 2svh 0;
  text-align: center;
}

.comissionTitle > h2 {
  padding-top: 2svh;
}

.comissionTitle img {
  margin-right: 10px;
}

.medicosContainer {
  display: flex;
  justify-content: center;
  padding: 10px;
  flex-wrap: wrap;
  margin: 5svh 5svw;
}

.promoters {
  height: 60px;
  width: auto;
  transition: filter 0.5s ease-in-out; /* Transição de opacidade */
  object-fit: fill;
}

.promoters:hover {
  cursor: pointer;
  filter: sepia(100%); /* Opacidade ao passar o mouse */
}

.abramede {
  aspect-ratio: auto 401 / 145;
}
.srmg {
  aspect-ratio: auto 641 / 182;
}

@media (max-width: 768px) {
  .comissionColumn1, .comissionColumn2 {
    flex: 1 1 100%;
  }
  .comissionTitle h2 {
    width: 95svw;
  }
}
@media (min-width: 1000px) {
  .comissionContainer {
    flex-wrap: unset;
  }
}

